<resources>
    <string name="app_name">CalcPal-NoFrag</string>
    <string name="Mult">*</string>
    <string name="Mod">%</string>
    <string name="Dot">.</string>
    <string name="Equal">=</string>
    <string name="Negative">+/-</string>
    <string name="Zero">0</string>
    <string name="Minus">-</string>
    <string name="Three">3</string>
    <string name="Two">2</string>
    <string name="One">1</string>
    <string name="Plus">+</string>
    <string name="Six">6</string>
    <string name="Five">5</string>
    <string name="Four">4</string>
    <string name="Clear">C</string>
    <string name="Nine">9</string>
    <string name="Eight">8</string>
    <string name="Seven">7</string>
    <string name="ClearLast">CE</string>
    <string name="Divide">/</string>
    <string name="display">0</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>