<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_buttons">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="413dp"
        android:layout_height="425dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/buttonMOD"
                android:layout_width="97dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Mod"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonDIV"
                android:layout_width="96dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Divide"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonMULT"
                android:layout_width="94dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Mult"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonCE"
                android:layout_width="96dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/ClearLast"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button7"
                android:layout_width="97dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Seven"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button8"
                android:layout_width="96dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Eight"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button9"
                android:layout_width="94dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Nine"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonC"
                android:layout_width="94dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Clear"
                android:textSize="36sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="96dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Four"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button5"
                android:layout_width="97dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Five"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button6"
                android:layout_width="96dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Six"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonPLUS"
                android:layout_width="94dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Plus"
                android:textSize="36sp" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button1"
                android:layout_width="94dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/One"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button2"
                android:layout_width="94dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Two"
                android:textSize="36sp" />

            <Button
                android:id="@+id/button3"
                android:layout_width="94dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Three"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonSUB"
                android:layout_width="94dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Minus"
                android:textSize="36sp" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/button0"
                android:layout_width="94dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Zero"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonDEC"
                android:layout_width="94dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Dot"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonNEG"
                android:layout_width="94dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Negative"
                android:textSize="36sp" />

            <Button
                android:id="@+id/buttonEQUAL"
                android:layout_width="94dp"
                android:layout_height="85dp"
                android:background="@android:color/transparent"
                android:text="@string/Equal"
                android:textSize="36sp" />

        </TableRow>
    </TableLayout>


</androidx.constraintlayout.widget.ConstraintLayout>